# reason-3d

./: .gitignore  INTEGRATION.md  README.md  cli.py  config.py  gen.sh  generate_variants.py  preprocess.py  pyproject.toml  requirements.txt  run.sh  run2.sh  run3.sh  scene_cli.py  test_render_filenames.py  test_variants.py
build_scene/: Object_retriever.py  PlaceObjects.py  llm_config.py  utilities.py  utils.py
preprocessing/: CreateDescriptions.py  CreateEmbeddings.py  fixRotation.py  image_render.py
rendering/: bpa.py  convert_for_blender.py  render_layout.py  render_scene.py
utils/: anybase.py  dtypes.py  helpers.py  logger.py  misc.py
utils/llm/: __init__.py  llm.py  msg.py  response.py
