[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reason-3d"
version = "0.1.0"
description = "Reason-3D: Text-to-Scene with Large Reasoning Models (VLM-unreliability audit fork)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "json_repair",
    "numpy==2.3.2",
    "openai",
    "pillow==11.3.0",
    "pydantic",
    "rich",
    "scikit-learn==1.7.1",
    "torch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Optional, role-based installs (mirror the genxr layout).
#   core      -> generation + variants + rendering (bpy) + offline tests
#   render    -> Blender rendering only (bpy + PIL)
#   preprocess-> the one-time VLM asset preprocessing (Gemini)
#   dev       -> lint/format/test tooling
[project.optional-dependencies]
core = [
    "bpy==5.1.2",
    "opencv-python-headless",
]
render = [
    "bpy==5.1.2",
    "pillow==11.3.0",
]
preprocess = [
    "google-genai",
    "opencv-python-headless",
]
dev = ["pytest"]

[project.scripts]
reason-3d = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["build_scene*", "rendering*", "utils*", "preprocessing*"]
# rendering/hdri and rendering/materials are asset dirs (no .py); don't install
# them as packages.
exclude = ["rendering.hdri", "rendering.materials"]
# Top-level modules (config.py, cli.py, generate_variants.py, preprocess.py,
# test_*.py) are picked up automatically as py_modules below.
namespaces = true

[tool.setuptools]
py-modules = ["config", "generate_variants", "preprocess"]

[tool.black]
line-length = 119
